<resources>
    <string name="app_name">E-Commerce</string>
    <string name="Logo_Slogan">Find, Discover, Enjoy</string>
    <string name="Login_Text">Already have an account? Login</string>
    <string name="Register_Text">Join Now</string>
    <string name="phoneNumberLabel">Phone Number</string>
    <string name="passwordHint">Password</string>
    <string name="LoginImgBackgroundDescription">Login Background</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="admin_login">I am an admin</string>
    <string name="regular_customer_login">Regular Customer</string>
    <string name="create_account">Create Account</string>
    <string name="usernameLabel">Username</string>
    <string name="loadingLinearProgressIndicator">Loading...</string>
    <string name="please_wait">Please wait…</string>
    <string name="product_name">Product Name…</string>
    <string name="product_description">Product Description…</string>
    <string name="product_price">Product Price…</string>
    <string name="add_product">Add Product</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="user_name">user name</string>
    <string name="tools">Tools</string>
    <string name="settings">Settings</string>
    <string name="logout">logout</string>
    <string name="categories">categories</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="user_product_name">Product Name</string>
    <string name="poduct_description">Poduct Description</string>
    <string name="user_product_description">Product Description</string>
    <string name="settings_close_text">Close</string>
    <string name="settings_update_text">Update</string>
    <string name="phone_number_settings_hint">Phone Number...</string>
    <string name="change_profile_settings">Change Profile</string>
    <string name="full_name_settings">Full Name...</string>
    <string name="address_settings">Address...</string>
    <string name="password_settings">Password</string>
</resources>