<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_settings"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/close_settings_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_close_text"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:background="@drawable/rounded_black_background"
                    android:layout_alignParentStart="true"
                    />
                <TextView
                    android:id="@+id/update_account_settings_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_update_text"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/rounded_black_background"
                    android:layout_alignParentEnd="true"
                    />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_profile_image"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/profile"
        android:layout_below="@+id/app_bar_settings"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"

        />
    <TextView
        android:id="@+id/profile_image_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_profile_settings"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginTop="4dp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:layout_below="@id/settings_profile_image"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/settings_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_image_change"
        android:hint="@string/phone_number_settings_hint"
        app:endIconMode="clear_text"
        app:endIconTint="@color/colorPrimaryDark"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:errorEnabled="true"
        app:errorIconTint="@color/colorPrimaryDark"
        app:endIconCheckable="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:minHeight="48dp"
            android:inputType="phone"
            android:padding="10dp"
            android:textColor="@color/colorPrimary"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/settings_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_phone_number"
        android:hint="@string/full_name_settings"
        app:endIconMode="clear_text"
        app:endIconTint="@color/colorPrimaryDark"
        app:endIconCheckable="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:minHeight="48dp"
            android:padding="10dp"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimary"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/settings_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_full_name"
        android:hint="@string/address_settings"
        app:endIconMode="clear_text"
        app:endIconTint="@color/colorPrimaryDark"
        app:endIconCheckable="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:minHeight="48dp"
            android:padding="10dp"
            android:inputType="textPostalAddress"
            android:textColor="@color/colorPrimary"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/settings_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_address"
        android:hint="@string/password_settings"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/colorPrimaryDark"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:minHeight="48dp"
            android:padding="10dp"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            />
    </com.google.android.material.textfield.TextInputLayout>




</RelativeLayout>